--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@remix-run/node": "1.4.3",
     "@remix-run/react": "1.4.3",
     "@remix-run/serve": "1.4.3",
+    "bcryptjs": "^2.4.3",
     "concurrently": "7.1.0",
     "mongoose": "6.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "3.0.24"
+    "tailwindcss": "3.0.24",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@remix-run/dev": "1.4.3",
